--- a/me-and-myself-gallery1-main/package.json
+++ b/me-and-myself-gallery1-main/package.json
@@ -8,14 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.56.14",
-    "@react-three/fiber": "^8.15.15",
+    "vite": "^5.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.160.0",
-    "vite": "^5.0.10"
+    "@react-three/fiber": "^8.15.15",
+    "@react-three/drei": "^9.56.14",
+    "three": "^0.160.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.3"
   }
-}
